2003-11-12 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdio.h: Implement missing stdio members: vsprintf(),
		vsprintf_P(), vsnprintf(), vsnprintf_P()
	* libc/stdio/Makefile.am: ditto.
	* libc/stdio/vsprintf.c: New file.
	* libc/stdio/vsprintf_p.c: New file.
	* libc/stdio/vsnprintf.c: New file.
	* libc/stdio/vsnprintf_p.c: New file.

2003-11-11  Theodore A. Roth  <troth@openavr.org>

	* avr-libc.spec.in (BuildRequires): Don't require doxygen or tetex if
	"--without docs" was given.

2003-11-11  Theodore A. Roth  <troth@openavr.org>

	* avr-libc.spec.in: Allow disabling build of docs sub-package with 
	"--without docs".

2003-11-11  Theodore A. Roth  <troth@openavr.org>

	* include/avr/crc16.h: Use inttypes.h defined types to allow use
	with -mint8.
	* include/avr/delay.h: Ditto.
	[Submitted by Tomas Vanek <vanekt@fbl.cz>]

2003-11-11  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/crc16.h (_crc16_update): Add dox.
	(_crc_xmodem_update): New function.

2003-11-04  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* libc/pmstring/strlcat_P.S: Use correct dox group (fix for bug #6359).
	* libc/pmstring/strlcpy_P.S: Use correct dox group (fix for bug #6359).

2003-10-20  Theodore A. Roth  <troth@openavr.org>

	* include/avr/iom128.h:
	* include/avr/portpins.h:
	Move generic PORTn, DDn and PINn defs to portpins.h.

2003-10-20  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/io.h: Include portpins.h.
	* include/avr/portpins.h: New file.
	* include/avr/ioat94k.h: Convert PORTxn to Pxn.
	* include/avr/iom128.h: Convert PORTxn to Pxn.
	* include/avr/iom162.h: Convert PORTxn to Pxn.
	* include/avr/iom64.h: Convert PORTxn to Pxn.
	* include/avr/iotn15.h: Convert PORTxn to Pxn.

2003-10-18  Theodore A. Roth  <troth@openavr.org>
[Fix for Bug #5976]

	* configure.in (AM_INIT_AUTOMAKE): Bump version.