@@ -1,3 +1,11 @@
+2003-11-18  Theodore A. Roth  <troth@openavr.org>
+
+	* configure.in (AM_INIT_AUTOMAKE): Bump version.
+	* include/avr/crc16.h (_crc16_update): Add line break to dox.
+	(_crc_xmodem_update): Ditto.
+	(_crc_ccitt_update): New function.
+	[Submitted by Tomas Vanek <vanekt@fbl.cz>]
+
 2003-11-12 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* include/stdio.h: Implement missing stdio members: vsprintf(),
